Fix alignment property used for icon

--- a/src/app/item-popup/DeepSightHarmonizerIcon.m.scss
+++ b/src/app/item-popup/DeepSightHarmonizerIcon.m.scss
@@ -5,7 +5,7 @@
   max-width: fit-content;
 
   img {
-    display: grid;
+    vertical-align: middle;
     width: 15px;
     height: 15px;
     border: 1px solid #999;
